"Cambios en la compilación y la API de C"

--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-12 16:31+0200\n"
+"PO-Revision-Date: 2020-10-13 18:42+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2107,21 +2107,29 @@ msgid ""
 "compatible) and so has been removed. (Contributed by Victor Stinner in :"
 "issue:`36707`.)"
 msgstr ""
+"El valor predeterminado para :data:`sys.abiflags` es ahora una cadena vacía: "
+"el flag ``m`` para pymalloc se ha vuelto innecesario (las compilaciones con "
+"y sin pymalloc son ABI compatibles) y por lo tanto se ha eliminado. "
+"(Contribución de Victor Stinner en :issue:`36707`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1528
 msgid "Example of changes:"
-msgstr ""
+msgstr "Ejemplos del cambio:"
 
 #: ../Doc/whatsnew/3.8.rst:1530
 msgid ""
 "Only ``python3.8`` program is installed, ``python3.8m`` program is gone."
 msgstr ""
+"Solo el programa ``python3.8`` es instalado, el programa ``python3.8m`` se "
+"ha eliminado."
 
 #: ../Doc/whatsnew/3.8.rst:1531
 msgid ""
 "Only ``python3.8-config`` script is installed, ``python3.8m-config`` script "
 "is gone."
 msgstr ""
+"Solo el script ``python3.8-config`` es instalado, el script ``python3.8m-"
+"config`` se ha eliminado."
 
 #: ../Doc/whatsnew/3.8.rst:1533
 msgid ""
@@ -2131,22 +2139,33 @@ msgid ""
 "PyPI. On Linux, for example, the Python 3.7 suffix ``.cpython-37m-x86_64-"
 "linux-gnu.so`` became ``.cpython-38-x86_64-linux-gnu.so`` in Python 3.8."
 msgstr ""
+"El flag ``m`` se ha eliminado del sufijo de los nombres de archivo de las "
+"bibliotecas dinámicas: los módulos de extensión de la biblioteca estándar, "
+"así como los producidos e instalados por paquetes de terceros, como los "
+"descargados desde PyPI. En Linux, por ejemplo, el sufijo ``.cpython-37m-"
+"x86_64-linux-gnu.so`` en Python 3.7 se ha convertido en ``.cpython-38-x86_64-"
+"linux-gnu.so`` en Python 3.8."
 
 #: ../Doc/whatsnew/3.8.rst:1540
 msgid ""
 "The header files have been reorganized to better separate the different "
 "kinds of APIs:"
 msgstr ""
+"Los archivos de cabeceras se han reorganizado para separar mejor los "
+"diferentes tipos de APIs:"
 
 #: ../Doc/whatsnew/3.8.rst:1543
 msgid "``Include/*.h`` should be the portable public stable C API."
-msgstr ""
+msgstr "``Include/*.h`` debe ser la API de C portable, pública y estable."
 
 #: ../Doc/whatsnew/3.8.rst:1544
 msgid ""
 "``Include/cpython/*.h`` should be the unstable C API specific to CPython; "
 "public API, with some private API prefixed by ``_Py`` or ``_PY``."
 msgstr ""
+"``Include/cpython/*.h`` debe ser la API de C inestable específica de "
+"CPython. Una API pública, con alguna API privada marcada con los prefijos "
+"``_Py`` o ``_PY``."
 
 #: ../Doc/whatsnew/3.8.rst:1546
 msgid ""
@@ -2156,12 +2175,21 @@ msgid ""
 "debuggers and profiles which has to access to CPython internals without "
 "calling functions. This API is now installed by ``make install``."
 msgstr ""
+"``Include/internal/*.h`` es la API de C interna privada, muy específica de "
+"CPython. Esta API no tiene retro-compatibilidad garantizada con versiones "
+"anteriores y no debe ser usada fuera de CPython. Solo está expuesta para "
+"cubrir necesidades muy específicas, como es el caso de depuradores y "
+"perfiladores, que necesitan acceder a los componentes internos de CPython "
+"sin llamar directamente a las funciones. Esta API es ahora instalada por "
+"``make install``."
 
 #: ../Doc/whatsnew/3.8.rst:1552
 msgid ""
 "(Contributed by Victor Stinner in :issue:`35134` and :issue:`35081`, work "
 "initiated by Eric Snow in Python 3.7.)"
 msgstr ""
+"(Contribución de Victor Stinner en :issue:`35134` y :issue:`35081`, trabajo "
+"iniciado por Eric Snow en Python 3.7.)"
 
 #: ../Doc/whatsnew/3.8.rst:1555
 msgid ""
@@ -2169,28 +2197,34 @@ msgid ""
 "and return type are well defined, they don't have issues specific to macros, "
 "variables have a local scopes. Examples:"
 msgstr ""
+"Algunas macros se han convertido a funciones inline estáticas: los tipos de "
+"los parámetros y el tipo de retorno están bien definidos, no entrañan "
+"cuestiones que precisen el uso específico de macros y las variables tienen "
+"ámbito local. Algunos ejemplos:"
 
 #: ../Doc/whatsnew/3.8.rst:1559
 msgid ":c:func:`Py_INCREF`, :c:func:`Py_DECREF`"
-msgstr ""
+msgstr ":c:func:`Py_INCREF`, :c:func:`Py_DECREF`"
 
 #: ../Doc/whatsnew/3.8.rst:1560
 msgid ":c:func:`Py_XINCREF`, :c:func:`Py_XDECREF`"
-msgstr ""
+msgstr ":c:func:`Py_XINCREF`, :c:func:`Py_XDECREF`"
 
 #: ../Doc/whatsnew/3.8.rst:1561
 msgid ":c:func:`PyObject_INIT`, :c:func:`PyObject_INIT_VAR`"
-msgstr ""
+msgstr ":c:func:`PyObject_INIT`, :c:func:`PyObject_INIT_VAR`"
 
 #: ../Doc/whatsnew/3.8.rst:1562
 msgid ""
 "Private functions: :c:func:`_PyObject_GC_TRACK`, :c:func:"
 "`_PyObject_GC_UNTRACK`, :c:func:`_Py_Dealloc`"
 msgstr ""
+"Funciones privadas: :c:func:`_PyObject_GC_TRACK`, :c:func:"
+"`_PyObject_GC_UNTRACK`, :c:func:`_Py_Dealloc`"
 
 #: ../Doc/whatsnew/3.8.rst:1565
 msgid "(Contributed by Victor Stinner in :issue:`35059`.)"
-msgstr ""
+msgstr "(Contribución de Victor Stinner en :issue:`35059`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1567
 msgid ""
@@ -2199,6 +2233,10 @@ msgid ""
 "excluded from the limited API (stable ABI), and were not documented. "
 "(Contributed by Victor Stinner in :issue:`35713`.)"
 msgstr ""
+"Las funciones :c:func:`PyByteArray_Init` y :c:func:`PyByteArray_Fini` se han "
+"eliminado. No eran de utilidad desde Python 2.7.4 y Python 3.2.0, cuando "
+"fueron excluidas de la API limitada (ABI estable) y dejaron de estar "
+"documentadas. (Contribución de Victor Stinner en :issue:`35713`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1572
 msgid ""
@@ -2206,6 +2244,9 @@ msgid ""
 "*`` rather of ``char *``. (Contributed by Serhiy Storchaka in :issue:"
 "`33818`.)"
 msgstr ""
+"El resultado de :c:func:`PyExceptionClass_Name` es ahora de tipo ``const "
+"char *`` en vez de ``char *``. (Contribución de Serhiy Storchaka en :issue:"
+"`33818`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1576
 msgid ""
@@ -2217,6 +2258,14 @@ msgid ""
 "annoyance to developers following CPython development, as forgetting to copy "
 "the file could produce build failures."
 msgstr ""
+"La dualidad conformada por ``Modules/Setup.dist`` y ``Modules/Setup`` ha "
+"sido eliminada. Anteriormente, al actualizar el árbol de fuentes de CPython, "
+"se tenía que copiar manualmente ``Modules/Setup.dist`` (dentro del árbol de "
+"fuentes) a ``Modules/Setup`` (dentro del árbol de compilación) para reflejar "
+"cualquier cambio en sentido ascendente. Esto suponía un pequeño beneficio "
+"para los empaquetadores, a expensas de una frecuente molestia para los "
+"desarrolladores de CPython, ya que olvidarse de copiar el archivo podía "
+"ocasionar fallos de compilación."
 
 #: ../Doc/whatsnew/3.8.rst:1584
 msgid ""
@@ -2225,10 +2274,15 @@ msgid ""
 "their changes in a git fork of CPython or as patch files, as they would do "
 "for any other change to the source tree."
 msgstr ""
+"Ahora el sistema de compilación siempre lee desde ``Modules/Setup`` dentro "
+"del árbol de fuentes. Se recomienda a las personas que deseen personalizar "
+"este archivo que mantengan sus cambios en un fork de git de CPython o como "
+"archivos de parche, como harían con cualquier otro cambio en el árbol de "
+"fuentes."
 
 #: ../Doc/whatsnew/3.8.rst:1589
 msgid "(Contributed by Antoine Pitrou in :issue:`32430`.)"
-msgstr ""
+msgstr "(Contribución de Antoine Pitrou en :issue:`32430`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1591
 msgid ""
@@ -2245,6 +2299,18 @@ msgid ""
 "available. (Contributed by Serhiy Storchaka in :issue:`36048` and :issue:"
 "`20092`.)"
 msgstr ""
+"Las funciones que convierten un número de Python a un entero de C, como :c:"
+"func:`PyLong_AsLong`, y las funciones de análisis de argumentos como :c:func:"
+"`PyArg_ParseTuple` con unidades de formato de conversión de enteros como "
+"``'i'``, ahora usarán el método especial :meth:`~object.__index__` si está "
+"disponible, en lugar de :meth:`~object.__int__`. Una advertencia de "
+"deprecación se emitirá para aquellos objetos que tengan el método "
+"``__int__()`` pero no el método ``__index__()`` (como :class:`~decimal."
+"Decimal` y :class:`~fractions.Fraction`). :c:func:`PyNumber_Check` ahora "
+"retornará ``1`` para los objetos que implementen ``__index__()``. :c:func:"
+"`PyNumber_Long`, :c:func:`PyNumber_Float` y :c:func:`PyFloat_AsDouble` ahora "
+"también usan el método ``__index__()`` si está disponible. (Contribución de "
+"Serhiy Storchaka en :issue:`36048` y :issue:`20092`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1605
 msgid ""
@@ -2254,6 +2320,11 @@ msgid ""
 "deallocation may need to be adjusted. (Contributed by Eddie Elizondo in :"
 "issue:`35810`.)"
 msgstr ""
+"Los objetos de tipo asignados al montículo ahora aumentarán su recuento de "
+"referencias en :c:func:`PyObject_Init` (y en su macro paralela "
+"``PyObject_INIT``) en lugar de en :c:func:`PyType_GenericAlloc`. Es posible "
+"que deban ajustarse los tipos que modifican la asignación o desasignación de "
+"instancias. (Contribución de Eddie Elizondo en :issue:`35810`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1611
 msgid ""
@@ -2262,6 +2333,10 @@ msgid ""
 "parameter for indicating the number of positional-only arguments. "
 "(Contributed by Pablo Galindo in :issue:`37221`.)"
 msgstr ""
+"La nueva función :c:func:`PyCode_NewWithPosOnlyArgs` permite crear objetos "
+"de código, al igual que :c:func:`PyCode_New`, pero con un parámetro "
+"*posonlyargcount* extra, que permite indicar el número de argumentos solo "
+"posicionales."
 
 #: ../Doc/whatsnew/3.8.rst:1616
 msgid ""
@@ -2269,6 +2344,10 @@ msgid ""
 "path (:c:func:`Py_GetProgramFullPath`) rather than to the program name (:c:"
 "func:`Py_GetProgramName`). (Contributed by Victor Stinner in :issue:`38234`.)"
 msgstr ""
+":c:func:`Py_SetPath` ahora establece :data:`sys.executable` en la ruta "
+"completa del programa (:c:func:`Py_GetProgramFullPath`), en vez de en el "
+"nombre del programa (:c:func:`Py_GetProgramName`). (Contribución de Victor "
+"Stinner en :issue:`38234`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1623
 msgid "Deprecated"
