--- a/distutils/extending.po
+++ b/distutils/extending.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-12 12:16+0200\n"
+"PO-Revision-Date: 2020-10-13 19:55+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -59,11 +59,11 @@ msgid ""
 "that should be copied into packages in addition to :file:`.py` files as a "
 "convenience."
 msgstr ""
-"La mayoría de las extensiones de los distutils están hechas dentro de los "
-"*scripts* :file:`setup.py` que quieren modificar los comandos existentes. "
-"Muchos simplemente añaden unas pocas extensiones de archivos que deberían "
-"ser copiadas dentro de los paquetes además de en :file:`.py` para su "
-"conveniencia."
+"La mayoría de las extensiones de distutils están hechas dentro de los "
+"scripts :file:`setup.py` donde se desea modificar los comandos existentes. "
+"Muchos simplemente añaden algunas extensiones de archivo que deben copiarse "
+"dentro de los paquetes, además de los archivos :file:`.py`, para mayor "
+"comodidad."
 
 #: ../Doc/distutils/extending.rst:20
 msgid ""
@@ -73,12 +73,12 @@ msgid ""
 "indirectly, directly subclassing the command they are replacing.  Commands "
 "are required to derive from :class:`Command`."
 msgstr ""
-"Gran parte de las implementaciones de comandos distutils son subclases de la "
-"clase :class:`distutils.cmd.Command` .Los nuevos comandos pueden heredar "
+"La mayoría de las implementaciones de comandos distutils son subclases de la "
+"clase :class:`distutils.cmd.Command`. Los nuevos comandos pueden heredar "
 "directamente de :class:`Command`. Mientras que los comandos de reemplazo a "
 "menudo derivan de la clase :class:`Command` de manera indirecta, "
-"subclasificando directamente el comando que están reemplazando. Se requieren "
-"comandos que deriven de :class:`Command`."
+"subclasificando directamente el comando que están reemplazando. Se requiere "
+"que los comandos deriven de :class:`Command`."
 
 #: ../Doc/distutils/extending.rst:35
 msgid "Integrating new commands"
@@ -104,7 +104,7 @@ msgid ""
 msgstr ""
 "La más común, y posiblemente la más lógica para casi todas las necesidades, "
 "es incluir las nuevas implementaciones con su *script* :file:`setup.py` y "
-"hacer que la función :func;\"distutils.core.setup\" las utilice:"
+"hacer que la función :func:`distutils.core.setup` las utilice::"
 
 #: ../Doc/distutils/extending.rst:57
 msgid ""
@@ -134,22 +134,23 @@ msgid ""
 "This should never be set in a configuration file provided with a package."
 msgstr ""
 "A partir de Python 2.4, hay una tercera opción disponible, destinada a "
-"permitir que nuevos comandos sean añadidos los cuales puedan ser compatibles "
-"con los *scripts* existentes de :file:`setup.py` sin requerir modificaciones "
-"en la instalación de Python. Se espera que esto permita que las extensiones "
-"de terceros brinden soporte para sistemas de empaquetado adicionales, pero "
-"los comandos pueden ser usados en los mismos casos que los comandos de "
-"distutils son utilizados. Una nueva opción de configuración, "
-"``command_packages`` (command-line option :option:`!--command-packages`), "
-"puede ser aplicada para especificar paquetes adicionales a ser buscados para "
-"módulos que implementen comandos. Como todas las opciones de distutuils, "
-"esto puede especificarse en la línea de comando o en un archivo de "
-"configuración. Esta opción sólo se puede configurar en la sección "
-"``[global]`` de un archivo de configuración, o antes de cualquier comando en "
-"la línea de comando. Si se establece en un archivo de configuración, se "
-"puede sobrescribir desde la línea de comandos; estableciéndolo como una "
-"cadena de caracteres vacía en la línea de comandos hace que se utilice el "
-"valor predeterminado."
+"permitir agregar nuevos comandos que sean compatibles con los scripts :file:"
+"`setup.py` existentes, sin requerir modificaciones en la instalación de "
+"Python. Se espera que esto permita que las extensiones de terceros brinden "
+"soporte para sistemas de empaquetado adicionales, pero los comandos pueden "
+"ser usados en los mismos casos en los que los comandos de distutils son "
+"utilizados. Una nueva opción de configuración, ``command_packages`` (opción "
+"de la línea de comandos :option:`!--command-packages`), puede ser aplicada "
+"para especificar paquetes adicionales a ser buscados para módulos que "
+"implementen comandos. Como todas las opciones de distutuils, esto puede "
+"especificarse en la línea de comandos o en un archivo de configuración. Esta "
+"opción sólo se puede configurar en la sección ``[global]`` de un archivo de "
+"configuración, o antes de cualquier comando en la línea de comandos. Si se "
+"establece en un archivo de configuración, se puede sobrescribir desde la "
+"línea de comandos. Establecer una cadena de caracteres vacía como valor de "
+"esta opción en la línea de comandos forzará el uso del valor predeterminado. "
+"Esto nunca debería ser establecido en un archivo de configuración "
+"proporcionado con un paquete."
 
 #: ../Doc/distutils/extending.rst:76
 msgid ""
@@ -169,14 +170,14 @@ msgstr ""
 "de paquetes a la lista de paquetes buscados para las implementaciones de "
 "comandos; los nombres múltiples de paquetes deben ser separados por comas. "
 "Cuando no se especifica, la búsqueda sólo se realiza en el paquete :mod:"
-"`distutils.command`. Cuando :file:`setup.py` se ejecuta con la opción ``--"
-"command-packages distcmds,buildcmds``, sin embargo, se buscarán los "
-"paquetes :mod:`distutils.command`, :mod:`distcmds`, and :mod:`buildcmds` en "
-"ese orden. Se espera que los nuevos comandos se implementen en módulos de "
-"idéntico nombre que el comando mediante clases que comparten el mismo "
-"nombre. Dado el ejemplo anterior de la opción de línea de comando, el "
-"comando :command:`bdist_openpkg` podría ser implementado por la clase :class:"
-"`distcmds.bdist_openpkg.bdist_openpkg` or :class:`buildcmds.bdist_openpkg."
+"`distutils.command`. Sin embargo, cuando :file:`setup.py` se ejecuta con la "
+"opción ``--command-packages distcmds,buildcmds``, se buscarán los paquetes :"
+"mod:`distutils.command`, :mod:`distcmds` y :mod:`buildcmds` en ese orden. Se "
+"espera que los nuevos comandos se implementen en módulos con idéntico nombre "
+"que el comando mediante clases que comparten el mismo nombre. Dado el "
+"ejemplo anterior de la opción de línea de comandos, el comando :command:"
+"`bdist_openpkg` podría ser implementado por la clase :class:`distcmds."
+"bdist_openpkg.bdist_openpkg` o por la clase :class:`buildcmds.bdist_openpkg."
 "bdist_openpkg`."
 
 #: ../Doc/distutils/extending.rst:90
@@ -192,9 +193,9 @@ msgid ""
 "file itself.  In dry-run mode, pairs should still be added to represent what "
 "would have been created."
 msgstr ""
-"Los comandos que crean distribuciones (archivos en el directorio :archive: "
-"`dist/` ) necesitan añadir el par ``(command, filename)``  a ``self."
-"distribution.dist_files`` y de este modo :command:`upload` puede subirlo a "
-"PyPI. El *nombre del archivo* en el par no contiene información de la ruta, "
-"solo el nombre del archive en sí. En el modo ensayo, los pares aún deben ser "
+"Los comandos que crean distribuciones (archivos en el directorio :file:`dist/"
+"`) necesitan añadir el par ``(command, filename)`` a ``self.distribution."
+"dist_files`` para que de este modo :command:`upload` pueda subirlo a PyPI. "
+"El elemento *filename* en el par no contiene información de la ruta, solo el "
+"nombre del archive en sí. En el modo ensayo, los pares aún deben ser "
 "añadidos para representar lo que se habría creado."
