--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-13 23:10+0200\n"
+"PO-Revision-Date: 2020-10-14 11:05+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2423,6 +2423,9 @@ msgid ""
 "``bdist_wheel`` (wheel packages) instead. (Contributed by Victor Stinner in :"
 "issue:`37481`.)"
 msgstr ""
+"El comando ``bdist_wininst`` de distutils está ahora obsoleto, usar "
+"``bdist_wheel`` (paquetes wheel) en su lugar. (Contribución de Victor "
+"Stinner en :issue:`37481`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1629
 msgid ""
@@ -2431,6 +2434,10 @@ msgid ""
 "exc:`PendingDeprecationWarning`. They will be removed in Python 3.9. "
 "(Contributed by Serhiy Storchaka in :issue:`29209`.)"
 msgstr ""
+"Los métodos ``getchildren()`` y ``getiterator()`` del módulo :mod:`~xml."
+"etree.ElementTree` ahora emiten una advertencia :exc:`DeprecationWarning`, "
+"en lugar de :exc:`PendingDeprecationWarning`. Serán eliminados en Python "
+"3.9. (Contribución de Serhiy Storchaka en :issue:`29209`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1635
 msgid ""
@@ -2439,6 +2446,10 @@ msgid ""
 "set_default_executor>` is deprecated and will be prohibited in Python 3.9. "
 "(Contributed by Elvis Pranskevichus in :issue:`34075`.)"
 msgstr ""
+"Pasar un objeto a :meth:`loop.set_default_executor() <asyncio.loop."
+"set_default_executor>` que no sea una instancia de :class:`concurrent."
+"futures.ThreadPoolExecutor` está obsoleto y será prohibido en Python 3.9. "
+"(Contribución de Elvis Pranskevichus en :issue:`34075`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1641
 msgid ""
@@ -2446,6 +2457,9 @@ msgid ""
 "class:`wsgiref.util.FileWrapper` and :class:`fileinput.FileInput` have been "
 "deprecated."
 msgstr ""
+"Los métodos :meth:`__getitem__` pertenecientes a las clases :class:`xml.dom."
+"pulldom.DOMEventStream`, :class:`wsgiref.util.FileWrapper` y :class:"
+"`fileinput.FileInput` están obsoletos a partir de ahora."
 
 #: ../Doc/whatsnew/3.8.rst:1645
 msgid ""
@@ -2453,6 +2467,9 @@ msgid ""
 "and returning the next item instead. (Contributed by Berker Peksag in :issue:"
 "`9372`.)"
 msgstr ""
+"Las implementaciones de estos métodos han estado ignorando su parámetro "
+"*index* y retornando el siguiente item en su lugar. (Contribución de Berker "
+"Peksag en :issue:`9372`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1649
 msgid ""
@@ -2460,6 +2477,9 @@ msgid ""
 "attribute in favor of the ``__annotations__`` attribute which has the same "
 "information. (Contributed by Raymond Hettinger in :issue:`36320`.)"
 msgstr ""
+"El atributo ``_field_types`` de la clase :class:`typing.NamedTuple` está "
+"ahora obsoleto en favor del atributo ``__annotations__``, que contiene la "
+"misma información. (Contribución de Raymond Hettinger en :issue:`36320`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1653
 msgid ""
@@ -2468,6 +2488,10 @@ msgid ""
 "versions. :class:`~ast.Constant` should be used instead. (Contributed by "
 "Serhiy Storchaka in :issue:`32892`.)"
 msgstr ""
+"Las clases ``Num``, ``Str``, ``Bytes``, ``NameConstant`` y ``Ellipsis`` del "
+"módulo :mod:`ast` están consideradas obsoletas y serán eliminadas en "
+"versiones futuras de Python. La clase :class:`~ast.Constant` debe ser usada "
+"en su lugar. (Contribución de Serhiy Storchaka en :issue:`32892`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1658
 msgid ""
@@ -2477,6 +2501,12 @@ msgid ""
 "meth:`~ast.NodeVisitor.visit_Constant` method to handle all constant nodes. "
 "(Contributed by Serhiy Storchaka in :issue:`36917`.)"
 msgstr ""
+"Los métodos ``visit_Num()``, ``visit_Str()``, ``visit_Bytes()``, "
+"``visit_NameConstant()`` y ``visit_Ellipsis()`` de la clase :class:`ast."
+"NodeVisitor` están obsoletos ahora y serán invocados en versiones futuras de "
+"Python. Agregar el método :meth:`~ast.NodeVisitor.visit_Constant` para "
+"manejar todos los nodos constantes. (Contribución de Serhiy Storchaka en :"
+"issue:`36917`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1665
 msgid ""
@@ -2484,6 +2514,9 @@ msgid ""
 "removed in version 3.10.  Instead of ``@asyncio.coroutine``, use :keyword:"
 "`async def` instead. (Contributed by Andrew Svetlov in :issue:`36921`.)"
 msgstr ""
+"El :term:`decorator` :func:`asyncio.coroutine` está obsoleto y será "
+"eliminado en Python 3.10. En lugar de ``@asyncio.coroutine``, se debe usar :"
+"keyword:`async def`. (Contribución de Andrew Svetlov en :issue:`36921`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1670
 msgid ""
@@ -2496,6 +2529,14 @@ msgid ""
 "BoundedSemaphore`, :class:`asyncio.Queue`, :func:`asyncio."
 "create_subprocess_exec`, and :func:`asyncio.create_subprocess_shell`."
 msgstr ""
+"En :mod:`asyncio`, pasar un argumento *loop* de forma explícita está ahora "
+"obsoleto y será eliminado en Python 3.10 para las siguientes funciones y "
+"constructores: :func:`asyncio.sleep`, :func:`asyncio.gather`, :func:`asyncio."
+"shield`, :func:`asyncio.wait_for`, :func:`asyncio.wait`, :func:`asyncio."
+"as_completed`, :class:`asyncio.Task`, :class:`asyncio.Lock`, :class:`asyncio."
+"Event`, :class:`asyncio.Condition`, :class:`asyncio.Semaphore`, :class:"
+"`asyncio.BoundedSemaphore`, :class:`asyncio.Queue`, :func:`asyncio."
+"create_subprocess_exec` y :func:`asyncio.create_subprocess_shell`."
 
 #: ../Doc/whatsnew/3.8.rst:1680
 msgid ""
@@ -2503,6 +2544,9 @@ msgid ""
 "deprecated and will be removed in version 3.11. (Contributed by Yury "
 "Selivanov in :issue:`34790`.)"
 msgstr ""
+"El paso explícito de objetos corrutina a :func:`asyncio.wait` está ahora "
+"obsoleto y será eliminado en Python 3.11. (Contribución de Yury Selivanov "
+"en :issue:`34790`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1684
 msgid ""
@@ -2514,6 +2558,13 @@ msgid ""
 "much better to use alternatives which return Unicode strings in Python 3. "
 "These functions have been broken for a long time."
 msgstr ""
+"Las siguientes funciones y métodos del módulo :mod:`gettext` están obsoletos "
+"para: :func:`~gettext.lgettext`, :func:`~gettext.ldgettext`, :func:`~gettext."
+"lngettext` y :func:`~gettext.ldngettext`. Retornan bytes codificados y es "
+"posible obtener excepciones inesperadas relacionadas con Unicode si hay "
+"problemas de codificación con las cadenas traducidas. En Python 3 es mucho "
+"mejor usar alternativas que retornen cadenas Unicode. Estas funciones han "
+"estado rotas durante mucho tiempo."
 
 #: ../Doc/whatsnew/3.8.rst:1692
 msgid ""
@@ -2524,12 +2575,20 @@ msgid ""
 "since they are only used for for the ``l*gettext()`` functions. (Contributed "
 "by Serhiy Storchaka in :issue:`33710`.)"
 msgstr ""
+"La función :func:`~gettext.bind_textdomain_codeset`, los métodos :meth:"
+"`~gettext.NullTranslations.output_charset` y :meth:`~gettext."
+"NullTranslations.set_output_charset` y el parámetro *codeset* de las "
+"funciones :func:`~gettext.translation` y :func:`~gettext.install` están "
+"también obsoletos, dado que solo son usados para las funciones "
+"``l*gettext()``. (Contribución de Serhiy Storchaka en :issue:`33710`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1700
 msgid ""
 "The :meth:`~threading.Thread.isAlive()` method of :class:`threading.Thread` "
 "has been deprecated. (Contributed by Dong-hee Na in :issue:`35283`.)"
 msgstr ""
+"El método :meth:`~threading.Thread.isAlive()` de la clase :class:`threading."
+"Thread` está ahora obsoleto. (Contribución de Dong-hee Na en :issue:`35283`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1704
 msgid ""
@@ -2540,10 +2599,19 @@ msgid ""
 "but do not have the :meth:`~object.__index__` method).  In future version "
 "they will be errors. (Contributed by Serhiy Storchaka in :issue:`36048`.)"
 msgstr ""
+"Muchas funciones incorporadas y de extensión que toman argumentos enteros "
+"ahora emitirán una advertencia de deprecación para :class:`~decimal.Decimal`"
+"\\ s, :class:`~fractions.Fraction`\\ s y cualquier otro objeto que se pueda "
+"convertir a enteros solamente con pérdida (por ejemplo, aquellos que tienen "
+"el método :meth:`~object .__int__` pero no el método :meth:`~object ."
+"__index__`). En una versión futura, esto constituirá un error. (Contribución "
+"de Serhiy Storchaka en :issue:`36048`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1712
 msgid "Deprecated passing the following arguments as keyword arguments:"
 msgstr ""
+"El paso de los siguientes argumentos como argumentos por palabra clave está "
+"ahora obsoleto:"
 
 #: ../Doc/whatsnew/3.8.rst:1714
 msgid ""
@@ -2551,10 +2619,13 @@ msgid ""
 "`profile.Profile.runcall`, :meth:`cProfile.Profile.runcall`, :meth:`bdb.Bdb."
 "runcall`, :meth:`trace.Trace.runfunc` and :func:`curses.wrapper`."
 msgstr ""
+"*func* en :func:`functools.partialmethod`, :func:`weakref.finalize`, :meth:"
+"`profile.Profile.runcall`, :meth:`cProfile.Profile.runcall`, :meth:`bdb.Bdb."
+"runcall`, :meth:`trace.Trace.runfunc` y :func:`curses.wrapper`."
 
 #: ../Doc/whatsnew/3.8.rst:1718
 msgid "*function* in :meth:`unittest.TestCase.addCleanup`."
-msgstr ""
+msgstr "*function* en :meth:`unittest.TestCase.addCleanup`."
 
 #: ../Doc/whatsnew/3.8.rst:1719
 msgid ""
@@ -2562,6 +2633,9 @@ msgid ""
 "`concurrent.futures.ThreadPoolExecutor` and :class:`concurrent.futures."
 "ProcessPoolExecutor`."
 msgstr ""
+"*fn* en el método :meth:`~concurrent.futures.Executor.submit` de las clases :"
+"class:`concurrent.futures.ThreadPoolExecutor` y :class:`concurrent.futures."
+"ProcessPoolExecutor`."
 
 #: ../Doc/whatsnew/3.8.rst:1722
 msgid ""
@@ -2569,6 +2643,9 @@ msgid ""
 "AsyncExitStack.callback` and :meth:`contextlib.AsyncExitStack."
 "push_async_callback`."
 msgstr ""
+"*callback* en :meth:`contextlib.ExitStack.callback`, :meth:`contextlib."
+"AsyncExitStack.callback` y :meth:`contextlib.AsyncExitStack."
+"push_async_callback`."
 
 #: ../Doc/whatsnew/3.8.rst:1725
 msgid ""
@@ -2576,16 +2653,22 @@ msgid ""
 "method of :class:`multiprocessing.managers.Server` and :class:"
 "`multiprocessing.managers.SharedMemoryServer`."
 msgstr ""
+"*c* y *typeid* en el método :meth:`~multiprocessing.managers.Server.create` "
+"de las clases :class:`multiprocessing.managers.Server` y :class:"
+"`multiprocessing.managers.SharedMemoryServer`."
 
 #: ../Doc/whatsnew/3.8.rst:1728
 msgid "*obj* in :func:`weakref.finalize`."
-msgstr ""
+msgstr "*obj* en :func:`weakref.finalize`."
 
 #: ../Doc/whatsnew/3.8.rst:1730
 msgid ""
 "In future releases of Python, they will be :ref:`positional-only <positional-"
 "only_parameter>`. (Contributed by Serhiy Storchaka in :issue:`36492`.)"
 msgstr ""
+"En futuros lanzamientos de Python, todos ellos serán :ref:`argumentos solo "
+"posicionales <positional-only_parameter>`. (Contribución de Serhiy Storchaka "
+"en :issue:`36492`.)"
 
 #: ../Doc/whatsnew/3.8.rst:1736
 msgid "API and Feature Removals"
