Avance de traducción de "Módulos mejorados" al 58%

--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-15 11:34+0200\n"
+"PO-Revision-Date: 2020-10-15 18:05+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -934,12 +934,18 @@ msgid ""
 "give the precise location of the end of the node.  (This only applies to "
 "nodes that have ``lineno`` and ``col_offset`` attributes.)"
 msgstr ""
+"Los nodos de AST ahora disponen de los atributos ``end_lineno`` y "
+"``end_col_offset``, que proporcionan la localización precisa del final del "
+"nodo. (Esto solo se aplica a los nodos que tienen los atributos ``lineno`` y "
+"``col_offset``.)"
 
 #: ../Doc/whatsnew/3.8.rst:576
 msgid ""
 "New function :func:`ast.get_source_segment` returns the source code for a "
 "specific AST node."
 msgstr ""
+"La nueva función :func:`ast.get_source_segment` retorna el código fuente de "
+"un nodo AST específico."
 
 #: ../Doc/whatsnew/3.8.rst:579
 msgid "(Contributed by Ivan Levkivskyi in :issue:`33416`.)"
@@ -947,19 +953,25 @@ msgstr "(Contribución de Ivan Levkivskyi en :issue:`33416`.)"
 
 #: ../Doc/whatsnew/3.8.rst:581
 msgid "The :func:`ast.parse` function has some new flags:"
-msgstr ""
+msgstr "La función :func:`ast.parse` tiene algunos flags nuevos:"
 
 #: ../Doc/whatsnew/3.8.rst:583
 msgid ""
 "``type_comments=True`` causes it to return the text of :pep:`484` and :pep:"
 "`526` type comments associated with certain AST nodes;"
 msgstr ""
+"``type_comments=True`` causa que la función retorne el texto de los "
+"comentarios de tipo especificados en :pep:`484` y :pep:`526` asociados con "
+"ciertos nodos AST;"
 
 #: ../Doc/whatsnew/3.8.rst:586
 msgid ""
 "``mode='func_type'`` can be used to parse :pep:`484` \"signature type "
 "comments\" (returned for function definition AST nodes);"
 msgstr ""
+"``mode='func_type'`` puede usarse para realizar un análisis sintáctico de "
+"los \"comentarios de tipo de firma\" de :pep:`484` (retornados por los nodos "
+"AST de definición de funciones);"
 
 #: ../Doc/whatsnew/3.8.rst:589
 msgid ""
@@ -967,6 +979,9 @@ msgid ""
 "For example, ``feature_version=(3, 4)`` will treat :keyword:`async` and :"
 "keyword:`await` as non-reserved words."
 msgstr ""
+"``feature_version=(3, N)`` permite especificar una versión de Python 3 "
+"previa. Por ejemplo, ``feature_version=(3, 4)`` hará que se trate a :keyword:"
+"`async` y :keyword:`await` como palabras no reservadas."
 
 #: ../Doc/whatsnew/3.8.rst:593
 msgid "(Contributed by Guido van Rossum in :issue:`35766`.)"
@@ -982,16 +997,23 @@ msgid ""
 "function can be used to execute a :term:`coroutine` and return the result "
 "while automatically managing the event loop. For example::"
 msgstr ""
+":func:`asyncio.run` ha pasado de la API provisional a la estable. Esta "
+"función se puede utilizar para ejecutar una :term:`coroutine` y retornar el "
+"resultado mientras se gestiona automáticamente el bucle de eventos. Por "
+"ejemplo::"
 
 #: ../Doc/whatsnew/3.8.rst:611
 msgid "This is *roughly* equivalent to::"
-msgstr ""
+msgstr "Esto es *aproximadamente* equivalente a::"
 
 #: ../Doc/whatsnew/3.8.rst:628
 msgid ""
 "The actual implementation is significantly more complex. Thus, :func:"
 "`asyncio.run` should be the preferred way of running asyncio programs."
 msgstr ""
+"La implementación real es significativamente más compleja. Por lo tanto, :"
+"func:`asyncio.run` debería ser la forma preferida de ejecutar programas "
+"asyncio."
 
 #: ../Doc/whatsnew/3.8.rst:631
 msgid "(Contributed by Yury Selivanov in :issue:`32314`.)"
@@ -1004,6 +1026,11 @@ msgid ""
 "There is no longer a need to directly call ``asyncio.run()`` which would "
 "spawn a new event loop on every invocation:"
 msgstr ""
+"La ejecución de ``python -m asyncio`` lanza un REPL asincrónico de forma "
+"nativa. Esto permite una rápida experimentación con código que tiene un "
+"nivel :keyword:`await` superior. Ya no es necesario llamar directamente a "
+"``asyncio.run()``, lo que generaría un nuevo ciclo de eventos en cada "
+"invocación:"
 
 #: ../Doc/whatsnew/3.8.rst:648
 msgid "(Contributed by Yury Selivanov in :issue:`37028`.)"
@@ -1024,12 +1051,16 @@ msgid ""
 "On Windows, the default event loop is now :class:`~asyncio."
 "ProactorEventLoop`. (Contributed by Victor Stinner in :issue:`34687`.)"
 msgstr ""
+"En Windows, el ciclo de eventos predeterminado ahora es :class:`~asyncio."
+"ProactorEventLoop`. (Contribución de Victor Stinner en :issue:`34687`.)"
 
 #: ../Doc/whatsnew/3.8.rst:657
 msgid ""
 ":class:`~asyncio.ProactorEventLoop` now also supports UDP. (Contributed by "
 "Adam Meily and Andrew Svetlov in :issue:`29883`.)"
 msgstr ""
+":class:`~asyncio.ProactorEventLoop` ahora también es compatible con UDP. "
+"(Contribución de Adam Meily y Andrew Svetlov en :issue:`29883`.)"
 
 #: ../Doc/whatsnew/3.8.rst:660
 msgid ""
@@ -1037,12 +1068,18 @@ msgid ""
 "`KeyboardInterrupt` (\"CTRL+C\"). (Contributed by Vladimir Matveev in :issue:"
 "`23057`.)"
 msgstr ""
+":class:`~asyncio.ProactorEventLoop` ahora puede ser interrumpido por :exc:"
+"`KeyboardInterrupt` (\"CTRL+C\"). (Contribución de Vladimir Matveev en :"
+"issue:`23057`.)"
 
 #: ../Doc/whatsnew/3.8.rst:664
 msgid ""
 "Added :meth:`asyncio.Task.get_coro` for getting the wrapped coroutine within "
 "an :class:`asyncio.Task`. (Contributed by Alex Grönholm in :issue:`36999`.)"
 msgstr ""
+"Se ha agregado :meth:`asyncio.Task.get_coro` para obtener la corrutina "
+"envuelta dentro de :class:`asyncio.Task`. (Contribución de Alex Grönholm en :"
+"issue:`36999`.)"
 
 #: ../Doc/whatsnew/3.8.rst:668
 msgid ""
@@ -1054,6 +1091,13 @@ msgid ""
 "the :meth:`~asyncio.Task.get_name` method. (Contributed by Alex Grönholm in :"
 "issue:`34270`.)"
 msgstr ""
+"Las tareas de Asyncio ahora se pueden nombrar, ya sea pasando el argumento "
+"por palabra clave ``name`` a :func:`asyncio.create_task` o al método :meth:"
+"`~asyncio.loop.create_task` del bucle de eventos, o invocando al método :"
+"meth:`~asyncio.Task.set_name` en el objeto de tarea. El nombre de la tarea "
+"es visible en la salida de ``repr()`` de :class:`asyncio.Task` y también se "
+"puede recuperar usando el método :meth:`~asyncio.Task.get_name`. "
+"(Contribución de Alex Grönholm en :issue:`34270`.)"
 
 #: ../Doc/whatsnew/3.8.rst:676
 msgid ""
@@ -1064,6 +1108,13 @@ msgid ""
 "applications that support IPv4 and IPv6 by attempting to simultaneously "
 "connect using both. (Contributed by twisteroid ambassador in :issue:`33530`.)"
 msgstr ""
+"Se agregó soporte para `Happy Eyeballs <https://en.wikipedia.org/wiki/"
+"Happy_Eyeballs>`_ a :func:`asyncio.loop.create_connection`. Para especificar "
+"el comportamiento, se han agregado dos nuevos parámetros: "
+"*happy_eyeballs_delay* e *interleave*. El algoritmo Happy Eyeballs mejora la "
+"capacidad de respuesta en aplicaciones que admiten IPv4 e IPv6 al intentar "
+"conectarse simultáneamente utilizando ambos. (Contribución de twisteroid "
+"ambassador en :issue:`33530`.)"
 
 #: ../Doc/whatsnew/3.8.rst:686
 msgid "builtins"
@@ -1078,6 +1129,12 @@ msgid ""
 "object marked with the ``CO_COROUTINE`` flag may then be returned. "
 "(Contributed by Matthias Bussonnier in :issue:`34616`)"
 msgstr ""
+"La función incorporada :func:`compile` se ha mejorado para que acepte el "
+"flag ``ast.PyCF_ALLOW_TOP_LEVEL_AWAIT``. Si se pasa este nuevo flag, :func:"
+"`compile` permitirá construcciones de nivel superior ``await``, ``async "
+"for`` y ``async with``, que normalmente se consideran sintaxis inválida. El "
+"objeto de código asíncrono marcado con el flag ``CO_COROUTINE`` puede ser "
+"retornado. (Contribución de Matthias Bussonnier en :issue:`34616`.)"
 
 #: ../Doc/whatsnew/3.8.rst:697
 msgid "collections"
@@ -1093,6 +1150,14 @@ msgid ""
 "type: ``OrderedDict(nt._asdict())``. (Contributed by Raymond Hettinger in :"
 "issue:`35864`.)"
 msgstr ""
+"El método :meth:`~collections.somenamedtuple._asdict` para :func:"
+"`collections.namedtuple` ahora retorna una instancia de :class:`dict` en "
+"lugar de una de :class:`collections.OrderedDict`. Esto funciona porque se "
+"garantiza que los diccionarios regulares mantienen el orden de inserción "
+"desde Python 3.7. Si se requieren las características adicionales de :class:"
+"`OrderedDict`, la solución sugerida es realizar una conversión del resultado "
+"al tipo deseado: ``OrderedDict(nt._asdict())``. (Contribución de Raymond "
+"Hettinger en :issue:`35864`.)"
 
 #: ../Doc/whatsnew/3.8.rst:709
 msgid "cProfile"
@@ -1103,6 +1168,8 @@ msgid ""
 "The :class:`cProfile.Profile <profile.Profile>` class can now be used as a "
 "context manager. Profile a block of code by running::"
 msgstr ""
+"La clase :class:`cProfile.Profile <profile.Profile>` ahora puede usarse como "
+"gestor de contexto. Ahora se puede perfilar un bloque de código ejecutando::"
 
 #: ../Doc/whatsnew/3.8.rst:720
 msgid "(Contributed by Scott Sanderson in :issue:`29235`.)"
@@ -1119,6 +1186,10 @@ msgid ""
 "memory while still preserving the field order. (Contributed by Michael Selik "
 "in :issue:`34003`.)"
 msgstr ""
+":class:`csv.DictReader` ahora retorna instancias de :class:`dict` en lugar "
+"de :class:`collections.OrderedDict`. La herramienta ahora es más rápida y "
+"usa menos memoria, mientras conserva el orden de los campos. (Contribución "
+"de Michael Selik en :issue:`34003`.)"
 
 #: ../Doc/whatsnew/3.8.rst:733
 msgid "curses"
@@ -1130,6 +1201,9 @@ msgid ""
 "underlying ncurses library: :data:`~curses.ncurses_version`. (Contributed by "
 "Serhiy Storchaka in :issue:`31680`.)"
 msgstr ""
+"Se agregó una nueva variable que contiene información de versión "
+"estructurada para la biblioteca ncurses subyacente: :data:`~curses."
+"ncurses_version`. (Contribución de Serhiy Storchaka en :issue:`31680`.)"
 
 #: ../Doc/whatsnew/3.8.rst:741
 msgid "ctypes"
@@ -1144,6 +1218,13 @@ msgid ""
 "used to load the initial DLL) and paths added by :func:`~os."
 "add_dll_directory`. (Contributed by Steve Dower in :issue:`36085`.)"
 msgstr ""
+"En Windows, :class:`~ctypes.CDLL` y sus subclases ahora aceptan un parámetro "
+"*winmode* para especificar flags para la invocación subyacente de "
+"``LoadLibraryEx``. Los flags predeterminados están establecidos para cargar "
+"solo las dependencias de DLL desde ubicaciones confiables, incluida la ruta "
+"donde se almacena la DLL (si se usa una ruta completa o parcial para cargar "
+"la DLL inicial) y las rutas agregadas por :func:`~os.add_dll_directory` . "
+"(Contribución de Steve Dower en :issue:`36085`.)"
 
 #: ../Doc/whatsnew/3.8.rst:752
 msgid "datetime"
@@ -1157,6 +1238,12 @@ msgid ""
 "weekday; these are the inverse of each class's ``isocalendar`` method. "
 "(Contributed by Paul Ganssle in :issue:`36004`.)"
 msgstr ""
+"Se agregaron nuevos constructores alternativos :meth:`datetime.date."
+"fromisocalendar` y :meth:`datetime.datetime.fromisocalendar`, que construyen "
+"objetos :class:`date` y :class:`datetime` respectivamente con el año, número "
+"de semana y día de la semana de la fecha del calendario ISO. Estos son el "
+"inverso del método ``isocalendar`` de cada clase. (Contribución de Paul "
+"Ganssle en :issue:`36004`.)"
 
 #: ../Doc/whatsnew/3.8.rst:762
 msgid "functools"
@@ -1168,6 +1255,9 @@ msgid ""
 "than as a function returning a decorator.  So both of these are now "
 "supported::"
 msgstr ""
+":func:`functools.lru_cache` ahora se puede usar como un decorador directo en "
+"lugar de como una función que retorna un decorador. De forma que ambos son "
+"compatibles ahora::"
 
 #: ../Doc/whatsnew/3.8.rst:775
 msgid "(Contributed by Raymond Hettinger in :issue:`36772`.)"
@@ -1178,10 +1268,13 @@ msgid ""
 "Added a new :func:`functools.cached_property` decorator, for computed "
 "properties cached for the life of the instance. ::"
 msgstr ""
+"Se ha agregado un nuevo decorador :func:`functools.cached_property`, para "
+"propiedades calculadas almacenadas en caché durante toda la vida útil de la "
+"instancia. ::"
 
 #: ../Doc/whatsnew/3.8.rst:791
 msgid "(Contributed by Carl Meyer in :issue:`21145`)"
-msgstr "(Contribución de Carl Meyer en :issue:`21145`)"
+msgstr "(Contribución de Carl Meyer en :issue:`21145`.)"
 
 #: ../Doc/whatsnew/3.8.rst:794
 msgid ""
@@ -1189,6 +1282,9 @@ msgid ""
 "methods into :term:`generic functions <generic function>` using :term:"
 "`single dispatch`::"
 msgstr ""
+"Se ha agregado un nuevo decorador :func:`functools.singledispatchmethod` que "
+"convierte métodos en :term:`funciones genéricas <función genérica>` usando :"
+"term:`single dispatch`::"
 
 #: ../Doc/whatsnew/3.8.rst:816
 msgid "(Contributed by Ethan Smith in :issue:`32380`)"
@@ -1204,6 +1300,9 @@ msgid ""
 "indicating a generation to get objects from. (Contributed by Pablo Galindo "
 "in :issue:`36016`.)"
 msgstr ""
+":func:`~gc.get_objects` ahora puede recibir un parámetro opcional "
+"*generation* que indica la generación de la que recolectar objetos. "
+"(Contribución de Pablo Galindo en :issue:`36016`.)"
 
 #: ../Doc/whatsnew/3.8.rst:827
 msgid "gettext"
@@ -1214,6 +1313,8 @@ msgid ""
 "Added :func:`~gettext.pgettext` and its variants. (Contributed by Franz "
 "Glasner, Éric Araujo, and Cheryl Sabella in :issue:`2504`.)"
 msgstr ""
+"Agregado :func:`~gettext.pgettext` y sus variantes. (Contribución de Franz "
+"Glasner, Éric Araujo y Cheryl Sabella en :issue:`2504`.)"
 
 #: ../Doc/whatsnew/3.8.rst:834
 msgid "gzip"
@@ -1224,6 +1325,8 @@ msgid ""
 "Added the *mtime* parameter to :func:`gzip.compress` for reproducible "
 "output. (Contributed by Guo Ci Teo in :issue:`34898`.)"
 msgstr ""
+"Se ha agregó el parámetro *mtime* a :func:`gzip.compress` para una salida "
+"reproducible. (Contribución de Guo Ci Teo en :issue:`34898`.)"
 
 #: ../Doc/whatsnew/3.8.rst:839
 msgid ""
@@ -1231,6 +1334,10 @@ msgid ""
 "for certain types of invalid or corrupt gzip files. (Contributed by Filip "
 "Gruszczyński, Michele Orrù, and Zackery Spytz in :issue:`6584`.)"
 msgstr ""
+"Una excepción :exc:`~gzip.BadGzipFile` es lanzada ahora, en lugar de :exc:"
+"`OSError`, para ciertos tipos de archivos gzip no válidos o corruptos. "
+"(Contribución de Filip Gruszczyński, Michele Orrù y Zackery Spytz en :issue:"
+"`6584`.)"
 
 #: ../Doc/whatsnew/3.8.rst:846
 msgid "IDLE and idlelib"
@@ -1245,6 +1352,13 @@ msgid ""
 "button or into the clipboard or a separate window by right-clicking the "
 "button.  (Contributed by Tal Einat in :issue:`1529353`.)"
 msgstr ""
+"Las salidas superiores a N líneas (50 por defecto) se pliegan en un botón. N "
+"se puede cambiar en la sección PyShell de la página General del cuadro de "
+"diálogo Settings. Se pueden plegar menos líneas, pero posiblemente más "
+"largas, haciendo clic derecho en la salida. La salida plegada se puede "
+"expandir en su lugar haciendo doble clic en el botón o en el portapapeles o "
+"en una ventana separada haciendo clic derecho en el botón. (Contribución de "
+"Tal Einat en :issue:`1529353`.)"
 
 #: ../Doc/whatsnew/3.8.rst:855
 msgid ""
@@ -1254,6 +1368,12 @@ msgid ""
 "suppress the normal Shell main module restart.  (Contributed by Cheryl "
 "Sabella, Terry Jan Reedy, and others in :issue:`5680` and :issue:`37627`.)"
 msgstr ""
+"Se ha agregado \"Run Customized\" al menú Run para ejecutar un módulo con "
+"configuraciones personalizadas. Cualquier argumento de la línea de comandos "
+"ingresado se agrega a sys.argv. Además, vuelven a aparecer en el cuadro para "
+"la próxima ejecución personalizada. También se puede suprimir el reinicio "
+"normal del módulo principal de la Shell. (Contribución de Cheryl Sabella, "
+"Terry Jan Reedy y otros en :issue:`5680` y :issue:`37627`.)"
 
 #: ../Doc/whatsnew/3.8.rst:861
 msgid ""
@@ -1263,6 +1383,11 @@ msgid ""
 "Options menu. (Contributed by Tal Einat and Saimadhav Heblikar in :issue:"
 "`17535`.)"
 msgstr ""
+"Se agregaron números de línea opcionales para las ventanas del editor IDLE. "
+"Las ventanas se abren sin números de línea, a menos que se establezca lo "
+"contrario en la pestaña General del cuadro de diálogo de configuración. Los "
+"números de línea de una ventana existente se muestran y ocultan en el menú "
+"Options. (Contribución de Tal Einat y Saimadhav Heblikar en :issue:`17535`.)"
 
 #: ../Doc/whatsnew/3.8.rst:867
 msgid ""
@@ -1273,10 +1398,19 @@ msgid ""
 "(Many people worked on this for eight years but the problem was finally "
 "solved by Serhiy Storchaka in :issue:`13153`.)"
 msgstr ""
+"La codificación nativa del sistema operativo ahora se usa para convertir "
+"entre cadenas de Python y objetos Tcl. Esto permite que el IDLE funcione con "
+"emoji y otros caracteres que no son BMP. Estos caracteres se pueden mostrar "
+"o copiar y pegar en ,o desde, el portapapeles. Convertir cadenas de Tcl a "
+"Python y viceversa ahora nunca falla. (Mucha gente trabajó en esto durante "
+"ocho años, pero el problema finalmente lo resolvió Serhiy Storchaka en :"
+"issue:`13153`.)"
 
 #: ../Doc/whatsnew/3.8.rst:874
 msgid "The changes above have been backported to 3.7 maintenance releases."
 msgstr ""
+"Los cambios anteriores se han portado a las versiones de mantenimiento de "
+"Python 3.7."
 
 #: ../Doc/whatsnew/3.8.rst:878
 msgid "inspect"
