--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-16 10:04+0200\n"
+"PO-Revision-Date: 2020-10-16 10:23+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -24,7 +24,7 @@ msgstr ""
 
 #: ../Doc/howto/pyporting.rst:5
 msgid "Porting Python 2 Code to Python 3"
-msgstr "Porting Python 2 Code to Python 3"
+msgstr "Portando código de Python 2 a Python 3"
 
 #: ../Doc/howto/pyporting.rst
 msgid "author"
@@ -64,8 +64,8 @@ msgid ""
 "Cannon's `Why Python 3 exists`_."
 msgstr ""
 "Si desea leer la versión de un desarrollador de Python fundamental sobre por "
-"qué Python 3 surgió, puede leer `Python 3 Q & A` de Nick Coghlan o `Why "
-"Python 3 exists`_."
+"qué Python 3 surgió, puede leer `Python 3 Q & A`_ de Nick Coghlan o `Why "
+"Python 3 exists`_ de Brett Cannon's."
 
 #: ../Doc/howto/pyporting.rst:23
 msgid ""
