Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/howto/pyporting.po
+++ b/howto/pyporting.po
@@ -306,8 +306,8 @@ msgstr ""
 "su código a Python 3! Pero para comprender completamente cómo va a cambiar "
 "el código y qué desea tener en cuenta mientras codifica, querrá aprender qué "
 "cambios produce Python 3 en términos de Python 2. Típicamente las dos "
-"mejores maneras de hacer eso es leer el :ref:`\"What's New\" <whatsnew-"
-"index>` doc para cada versión de Python 3 y el libro `Porting to Python 3`_ "
+"mejores maneras de hacer eso es leer la documentación :ref:`\"What's New\" <whatsnew-"
+"index>` para cada versión de Python 3 y el libro `Porting to Python 3`_ "
 "(que es gratis en línea). También hay una práctica `cheat sheet`_ del "
 "proyecto Python-Future.</whatsnew-index>."
 
