Corrección error del build + términos pospell 1.0.11

--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: Python en Español 3.7\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-16 20:12+0200\n"
+"PO-Revision-Date: 2020-10-16 21:15+0200\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -2144,7 +2144,7 @@ msgid ""
 "required to be present. Specify \"total=False\" to allow keys to be "
 "optional::"
 msgstr ""
-"Un tipo de diccionario con tipos para cada clave. Consultar pep:`589` y :"
+"Un tipo de diccionario con tipos para cada clave. Consultar :pep:`589` y :"
 "class:`typing.TypedDict`. TypedDict usa solo claves de cadenas de "
 "caracteres. De forma predeterminada, se requiere que todas las claves estén "
 "presentes. Especifica \"total=False\" para permitir que las claves sean "
