Actualizado con rama 3.8 y eliminado diccionario inútil.

--- a/distutils/extending.po
+++ b/distutils/extending.po
@@ -142,7 +142,7 @@ msgstr ""
 "utilizados. Una nueva opción de configuración, ``command_packages`` (opción "
 "de la línea de comandos :option:`!--command-packages`), puede ser aplicada "
 "para especificar paquetes adicionales a ser buscados para módulos que "
-"implementen comandos. Como todas las opciones de distutuils, esto puede "
+"implementen comandos. Como todas las opciones de distutils, esto puede "
 "especificarse en la línea de comandos o en un archivo de configuración. Esta "
 "opción sólo se puede configurar en la sección ``[global]`` de un archivo de "
 "configuración, o antes de cualquier comando en la línea de comandos. Si se "
