Apply suggestions from code review
Co-authored-by: Cristián Maureira-Fredes <cmaureir@users.noreply.github.com>

--- a/whatsnew/3.8.po
+++ b/whatsnew/3.8.po
@@ -3205,7 +3205,7 @@ msgstr ""
 
 #: ../Doc/whatsnew/3.8.rst:1794
 msgid "Porting to Python 3.8"
-msgstr "Portar a Python 3.8"
+msgstr "Portando a Python 3.8"
 
 #: ../Doc/whatsnew/3.8.rst:1796
 msgid ""
