--- a/howto/logging-cookbook.po
+++ b/howto/logging-cookbook.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-10-04 16:36-0300\n"
+"PO-Revision-Date: 2020-10-17 21:52-0300\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -415,11 +415,11 @@ msgstr ""
 "para lograr esto, no siempre es conveniente pasar la información de esta "
 "manera. Si bien puede resultar tentador crear instancias :class:`Logger` por "
 "conexión, esta no es una buena idea porque estas instancias no se liberan de "
-"memoria vía el recolector de basura (*garbage collector*). Si bien esto no es "
-"un problema en la práctica, cuando el número de instancias de :class:"
-"`Logger` depende del nivel de granularidad que desea usar para hacer el logging de una "
-"aplicación, podría ser difícil de administrar si el número de instancias :"
-"class:`Logger` se vuelven efectivamente ilimitadas."
+"memoria vía el recolector de basura (*garbage collector*). Si bien esto no "
+"es un problema en la práctica, cuando el número de instancias de :class:"
+"`Logger` depende del nivel de granularidad que desea usar para hacer el "
+"logging de una aplicación, podría ser difícil de administrar si el número de "
+"instancias :class:`Logger` se vuelven efectivamente ilimitadas."
 
 #: ../Doc/howto/logging-cookbook.rst:564
 msgid "Using LoggerAdapters to impart contextual information"
@@ -440,10 +440,10 @@ msgstr ""
 "Una manera fácil de pasar información contextual para que se genere junto "
 "con la información de eventos logging es usar la clase :class:"
 "`LoggerAdapter`. Esta clase está diseñada para parecerse a :class:`Logger`, "
-"de modo que pueda llamar :meth:`debug`, :meth:`info`, :meth:`warning`, :"
-"meth:`error`, :meth:`excepción`, :meth`critical` y :meth:`log`. Estos "
-"métodos tienen las mismas signaturas que sus contrapartes en :class:"
-"`Logger`, por lo que puede usar los dos tipos de instancias indistintamente."
+"de modo que pueda llamar :meth:`debug`, :meth:`info`, :meth:`warning`, :meth:"
+"`error`, :meth:`excepción`, :meth`critical` y :meth:`log`. Estos métodos "
+"tienen las mismas signaturas que sus contrapartes en :class:`Logger`, por lo "
+"que puede usar los dos tipos de instancias indistintamente."
 
 #: ../Doc/howto/logging-cookbook.rst:574
 #, fuzzy
